# QDependency

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md
.claude/: settings.local.json
resources/i18n/: qdepends_zh_CN.ts
resources/theme/: dark.qss
src/: main.cpp
src/core/: apiset.cpp  apiset.h  checksum.cpp  checksum.h  demangle.cpp  demangle.h  disasm.cpp  disasm.h  knowndlls.cpp  knowndlls.h  manifest.cpp  manifest.h  peinfo.h  peparser.cpp  peparser.h  resolver.cpp  resolver.h
src/session/: analysissession.cpp  analysissession.h  exportmodel.cpp  exportmodel.h  importmodel.cpp  importmodel.h  modulelistmodel.cpp  modulelistmodel.h  modulenode.h  sessionserializer.cpp  sessionserializer.h
src/ui/: disasmdialog.cpp  disasmdialog.h  findbar.cpp  findbar.h  headerinfodialog.cpp  headerinfodialog.h  iconfactory.cpp  iconfactory.h  logwidget.cpp  logwidget.h  mainwindow.cpp  mainwindow.h  panetitlebar.cpp  panetitlebar.h  sysinfodialog.cpp  sysinfodialog.h
tests/: pedump.cpp
tools/: fill_translations.ps1
